--- a/GXP/.gitignore
+++ b/GXP/.gitignore
@@ -5,9 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
-
-# Hosting Cache
-.cache
+firebase-debug.*.log*
 
 # Firebase cache
 .firebase/
